feat: add next auth

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=postgresql://postgres:Hj1DeFd7Fhck31AN@db.ejfgqljzxviafqjkczer.supabase.co:5432/postgres
+APP_DOMAIN=http://localhost:3000
