--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=postgresql://postgres:Hj1DeFd7Fhck31AN@db.ejfgqljzxviafqjkczer.supabase.co:5432/postgres
-APP_DOMAIN=http://localhost:3000
+
+GOOGLE_CLIENT_ID=770875948679-r8stf9rtceover78bfe3e630i6v7acg0.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
