feat: add script prepare to run prisma

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DATABASE_URL=postgresql://postgres:Hj1DeFd7Fhck31AN@db.ejfgqljzxviafqjkczer.supa
 
 GOOGLE_CLIENT_ID=770875948679-r8stf9rtceover78bfe3e630i6v7acg0.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_AUTH_SECRET=secret
